# labs

./: AtividadeAvaliativa1oBimestre.ipynb  lab_01.ipynb
lab02/: Laboratório_02_Imagem_em_tons_de_cinza.ipynb
lab03/filtros-streamlit/: aula.py  pyproject.toml
lab03/filtros-streamlit/filtros_streamlit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lab03/filtros-streamlit/tests/: test_filtros_streamlit.py
