[tool.poetry]
name = "filtros-streamlit"
version = "0.1.0"
description = ""
authors = ["Mario H. Adaniya <mhadaniya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.60.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
